--- a/karel.html
+++ b/karel.html
@@ -1,6 +1,5 @@
-<div align="center"><br /><iframe width="640" height="360" src="https://dcccd.yuja.com/V/Video?v=7940220&amp;a=171698105&amp;from=7&amp;preload=false" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" loading="lazy"></iframe><br /><br /></div>
-<p><span style="font-size: 12pt;"><img src="https://dcccd.blackboard.com/bbcswebdav/pid-32153936-dt-content-rid-243695455_1/xid-243695455_1#data-ally-user-updated-alt=Cover+to+the+programming+book+%22Karel+J.+Robot.%22" alt="Cover to the programming book &quot;Karel J. Robot.&quot;" width="217" height="268" style="border: 0px solid #000000; float: right;" /><a href="http://csis.pace.edu/~bergin/KarelJava2ed/Karel++JavaEdition.html" target="_blank" rel="noopener">Karel J. Robot, a Gentle Introduction to the Art of Oject-Oriented Programming</a></span></p>
-<p><span style="font-size: 12pt;"><a href="https://compedu.stanford.edu/karel-reader/docs/java/en/intro.html" target="_blank" rel="noopener">Karel the Robot Learns Java</a></span></p>
-<p><span style="font-size: 12pt;"><a href="https://web.stanford.edu/~cpiech/karel/ide.html" target="_blank" rel="noopener">Karel IDE at Stanford</a></span></p>
-<p></p>
-<p></p>
+![Cover to the programming book "Karel J. Robot."](https://dcccd.blackboard.com/bbcswebdav/pid-32153936-dt-content-rid-243695455_1/xid-243695455_1#data-ally-user-updated-alt=Cover+to+the+programming+book+%22Karel+J.+Robot.%22)[Karel J. Robot, a Gentle Introduction to the Art of Oject-Oriented Programming](http://csis.pace.edu/~bergin/KarelJava2ed/Karel++JavaEdition.html)
+
+[Karel the Robot Learns Java](https://compedu.stanford.edu/karel-reader/docs/java/en/intro.html)
+
+[Karel IDE at Stanford](https://web.stanford.edu/~cpiech/karel/ide.html)
